--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -29,6 +29,17 @@
 <% end %> -->
 
 <%= form_for @user do |f| %>
+  <% if @user.errors.any? %>
+    <div id="error explanation">
+      <h4><%= pluralize(@user.errors.count, "error") %>
+        prohibited this user from being saved: </h4>
+      <ul>
+        <% @user.errors.full_messages.each do |msg| %>
+          <li><%= msg %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
   <%= f.label :username, "Your username"%>
   <%= f.text_field :username, value: "john_doe" %>
   <br>
